--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body {
 
 <div class="topnav" id="myTopnav">
   <a href="#home" class="active">Home</a>
-  <a href="file:///C:/Users/francesco.scicchitan/index.html">es 1</a>
+  <a href="index.html">es 1</a>
   <a href="file:///C:/Users/francesco.scicchitan/Desktop/es%20presentazione/index1.html">scheda personale</a>
   <a href="file:///C:/Users/francesco.scicchitan/Desktop/es%20presentazione/index2.html">es css</a>
   <a href="file:///C:/Users/francesco.scicchitan/Desktop/es%20presentazione/es%202%20css.html">es 2 css</a>
