--- a/es 1.html
+++ b/es 1.html
@@ -1,97 +1,41 @@
-<!DOCTYPE html>
 <html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
+		<head>
+			  <title>La mia prima pagina</title>
+		
+		</head>
 
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
 
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #04AA6D;
-  color: white;
-}
-
-.topnav .icon {
-  display: none;
-}
-
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
-</style>
-</head>
 <body>
+<p> <h1>Mi chiamo Francesco Scicchitano e sto testando i tag html di base </h1> </p>
 
-<div class="topnav" id="myTopnav">
-  <a href="#home" class="active">Home</a>
-  <a href="file:///C:/Users/francesco.scicchitan/index.html">es 1</a>
-  <a href="file:///C:/Users/francesco.scicchitan/Desktop/es%20presentazione/index1.html">scheda personale</a>
-  <a href="file:///C:/Users/francesco.scicchitan/Desktop/es%20presentazione/index2.html">es css</a>
-  <a href="file:///C:/Users/francesco.scicchitan/Desktop/es%20presentazione/es%202%20css.html">es 2 css</a>
-  <a href="file:///C:/Users/francesco.scicchitan/es%20flip%20card.html">es flip card</a>
-  <a href="file:///C:/Users/francesco.scicchitan/Desktop/es%20presentazione/ES%20DIV%20ANNIDATI.html">es div annidati</a>
-  <a href="file:///C:/Users/francesco.scicchitan/Desktop/es%20presentazione/es%20link.html">es link</a>
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-  </a>
-</div>
+Sono Marco Palladino e inizio a studiare l'html.
+<br>
+Chi ha inventato questo linguaggio?
+<br>
+<p>Tim Berners-Lee ha inventato l'HTML</p>
+<br>
+Quando è stato inventato?
+<br>
+<p>Nel 1990</p>
+<br>
+Quali sono gli scopi di questo linguaggio?
+<br>
+<p>HTML ha lo scopo di gestire i contenuti associandone o specificandone allo stesso tempo la struttura grafica all'interno della pagina web da realizzare grazie all'utilizzo di tag diversi</p>
+<br>
+Che cose il WEB?
+<br>
+<p>Il WEB è uno dei principali servizi di Internet, che permette di navigare accedendo a vari contenuti</p>
+<br>
+Che problemi risolveva il WEB ?
+<br>
+<p>Il WEB da accesso a moltissime informazioni in poco tempo, da esso sono nati i social per comunicare in maniera semplicissima in ogni parte del mondo, contribuisce alla libertà di espressione e alla diffusione di contenuti</p>
+<br>
+Che differenza tra web e html ed internet?
+<br>
+<p>l'INTERNET è la struttura fisica, composta da cavi, server ecc..., il WEB è uno dei tanti servizi di Internet, l'HTML è un linguaggio dichiarativo e taggato
 
-<div style="padding-left:16px">
-  <h2>Responsive Topnav Example</h2>
-  <p>Resize the browser window to see how it works.</p>
-</div>
 
-<script>
-function myFunction() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
-  }
-}
-</script>
 
 </body>
-</html>
+
+</html>                 
