--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ body {margin:0;font-family:Arial}
       <a href="file:///C:/Users/francesco.scicchitan/Desktop/es%20presentazione/index1.html">scheda personale</a>
       <a href="file:///C:/Users/francesco.scicchitan/Desktop/es%20presentazione/index2.html">es css</a>
       <a href="file:///C:/Users/francesco.scicchitan/Desktop/es%20presentazione/es%202%20css.html">es 2 css</a>
-      <a href="file:///C:/Users/francesco.scicchitan/es%20flip%20card.html">es flip card</a>
+      <a href="https://france902.github.io/tpsit/flip__card.html">es flip card</a>
       <a href="file:///C:/Users/francesco.scicchitan/Desktop/es%20presentazione/ES%20DIV%20ANNIDATI.html">es div annidati</a>
       <a href="https://france902.github.io/tpsit/link.html">es link</a>
     </div>
