--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ body {margin:0;font-family:Arial}
     <div class="dropdown-content">
       <a href="https://france902.github.io/tpsit/es%201.html">es 1</a>
       <a href="file:///C:/Users/francesco.scicchitan/Desktop/es%20presentazione/index1.html">scheda personale</a>
-      <a href="file:///C:/Users/francesco.scicchitan/Desktop/es%20presentazione/index2.html">es css</a>
+      <a href="https://france902.github.io/tpsit/es%201%20css.html">es css</a>
       <a href="file:///C:/Users/francesco.scicchitan/Desktop/es%20presentazione/es%202%20css.html">es 2 css</a>
       <a href="https://france902.github.io/tpsit/flip__card.html">es flip card</a>
       <a href="file:///C:/Users/francesco.scicchitan/Desktop/es%20presentazione/ES%20DIV%20ANNIDATI.html">es div annidati</a>
