--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ body {margin:0;font-family:Arial}
       <a href="https://france902.github.io/tpsit/es%201.html">es 1</a>
       <a href="https://france902.github.io/tpsit/scheda_personale.html">scheda personale</a>
       <a href="https://france902.github.io/tpsit/es%201%20css.html">es css</a>
-      <a href="file:///C:/Users/francesco.scicchitan/Desktop/es%20presentazione/es%202%20css.html">es 2 css</a>
+      <a href="https://france902.github.io/tpsit/es%202%20css.html">es 2 css</a>
       <a href="https://france902.github.io/tpsit/flip__card.html">es flip card</a>
       <a href="https://france902.github.io/tpsit/ES%20DIV%20ANNIDATI.html">es div annidati</a>
       <a href="https://france902.github.io/tpsit/link.html">es link</a>
