--- a/javascript.html
+++ b/javascript.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <!DOCTYPE html>
 <html>
 <head>
 <style>
@@ -86,16 +94,15 @@
 <h2>Animated Button - "Pressed Effect"</h2>
 
 <button class="button"onclick="Testo()">Click Me</button>
-<button class="button1" onclick="Nasconditesto()">Click me</button>
+<button class="button1" onclick="Testo3()">Click me</button>
 <button class="button2" onclick="Testo2()">Click me</button>
-<div id="scritte"> <h1>Ciao</h1></div>
 <script>
 
     function Testo(){
         alert("Ciao")
     }
-    function Nasconditesto(){
-        document.getElementById('scritte').style.display = 'none';
+    function Testo3(){
+        alert("Come stai?")
     }
     function Testo2(){
         alert("Che fai stasera?")
@@ -103,5 +110,7 @@
 
 </script>
 
+</body>
+</html>
 </body>
 </html>
