--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@ body {margin:0;font-family:Arial}
       <a href="https://france902.github.io/tpsit/flip__card.html">es flip card</a>
       <a href="https://france902.github.io/tpsit/ES%20DIV%20ANNIDATI.html">es div annidati</a>
       <a href="https://france902.github.io/tpsit/link.html">es link</a>
+      <a href="https://france902.github.io/tpsit/es_1_jst.html">es 1 js</a>
+      <a href="https://france902.github.io/tpsit/es_2_javascript.html">es 2 js</a>
+      <a href="https://france902.github.io/tpsit/es_3_js.html">es 3 js</a>
+      <a href="https://france902.github.io/tpsit/dislivello.html">es montagna</a>
     </div>
   </div> 
   <a href="#about">About</a>
