--- a/index.html
+++ b/index.html
@@ -139,9 +139,8 @@ body {margin:0;font-family:Arial}
 </div>
 
 <div style="padding-left:16px">
-  <h2>Responsive Topnav with Dropdown</h2>
-  <p>Resize the browser window to see how it works.</p>
-  <p>Hover over the dropdown button to open the dropdown menu.</p>
+  <h2>IL MIO SITO WEB</h2></h2>
+  <p>Pagina per visualizzare gli esercizi</p>
 </div>
 
 <script>
