--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@ body {margin:0;font-family:Arial}
       <a href="https://france902.github.io/tpsit/dislivello.html">es dislivello</a>
       <a href="https://france902.github.io/tpsit/js_5.html">es 5 js</a>
        <a href="https://france902.github.io/tpsit/es_js_6.html">es 6 js</a>
+      <a href="https://france902.github.io/tpsit/js_7.html">simulazione verifica</a>
     </div>
   </div> 
   <a href="#about">About</a>
