--- a/js_7.html
+++ b/js_7.html
@@ -21,7 +21,7 @@
         display:none;
     }
 </style>
-<button onclick="getTime()"> test sul click</button>
+<button onclick="getTime()"> sasso, carta o forbici</button>
 <h1>JavaScript Math</h1>
 <h2>The Math.random() Method</h2>
 <p>Math.random()*3 returns a random number between 0 and 3:</p>
@@ -39,7 +39,7 @@
     let carta = document.getElementById("carta");
     let x = Math.floor((Math.random() * 3) + 1);
     document.getElementById("demo").innerHTML = x;
-    setInterval(getTime,99999999999999999)
+    setInterval(getTime,1000)
   function getTime(){
    if(n==0){
     mioOutput.style.display= 'none';
