--- a/morra_cinese.html
+++ b/morra_cinese.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Morra cinese</title>
+
     <style>
+
         #montagna_blu{
             width:100%;
             height:100%;
@@ -87,6 +89,18 @@
             margin-left: 190px;
             animation: opacity1 1.5s ease-in-out;
             border: 5px solid black;
+        }
+        #scatola_nome{
+            position:fixed;
+            width:150px;
+            height:60px;
+            background-color: rgb(213, 252, 255);
+            text-align: center;
+            margin-top: -100px;
+            margin-left: 10px;
+            border: 5px solid black;
+            opacity: 0;
+            font-size: 30px;
         }
         @keyframes opacity1{
             from{
@@ -192,7 +206,7 @@
 <body>
     <div id="scatola_immagine1"> <img id="montagna_blu" src="https://images.unsplash.com/photo-1480497490787-505ec076689f?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8fA%3D%3D" alt=""></div>
     <div id="testo1"><p style="font-size: 50px; margin-top: 0px;">BENVENUTO ALLA MORRA CINESE</p></div>
-    <div> <button class="bottone1" onclick="Inizia()" style="width:300px; position: fixed; background: none; border: 5px solid black; cursor: pointer; background-color: rgb(213, 252, 255); margin-top: 270px; margin-left: 470px;" ><p style="font-size:50px;">Inizia</p></button></div>
+    <div> <button class="bottone1" onclick="Inizia1()" style="width:300px; position: fixed; background: none; border: 5px solid black; cursor: pointer; background-color: rgb(213, 252, 255); margin-top: 270px; margin-left: 470px;" ><p style="font-size:50px;">Inizia</p></button></div>
     <div> <button class="bottone2" onclick="Scelta1()" style="width:300px; position: fixed; background: none; border: 5px solid black; cursor: pointer; background-color: rgb(213, 252, 255); margin-top: 180px; margin-left: 270px;" ><p style="font-size:49px;">Computer vs Computer</p></button></div>
     <div> <button class="bottone4" onclick="Scelta1()" style="width:300px; position: fixed; background: none; border: 5px solid black; cursor: pointer; background-color: rgb(213, 252, 255); margin-top: 30px; margin-left: 470px;" ><p style="font-size:49px;">Rigioca</p></button></div>
     <div> <button class="bottone3" onclick="Scelta2()" style="width:300px; position: fixed; background: none; border: 5px solid black; cursor: pointer; background-color: rgb(213, 252, 255); margin-top: 180px; margin-left: 670px;" ><p style="font-size:50px;">Player vs Computer</p></button></div>
@@ -208,8 +222,13 @@
     <p id="risultato" style="font-size:70px;margin-left: 310px; margin-top: 325px; border: 5px solid black;" > </p>
     <div> <button class="bottone5" onclick="esci()" style="width:200px; height:100px; position: fixed; background: none; border: 5px solid black; cursor: pointer; background-color: rgb(213, 252, 255); margin-top: 150px; margin-left: 520px;" ><p style="font-size:50px;">Esci</p></button></div>
     <div> <button class="bottone6" onclick="Scelta2()" style="width:300px; position: fixed; background: none; border: 5px solid black; cursor: pointer; background-color: rgb(213, 252, 255); margin-top: -100px; margin-left: 470px;" ><p style="font-size:49px;">Rigioca</p></button></div>
+    <button id="nome1" style="width:400px; height:100px; position: fixed; background: none; border: 5px solid black; cursor: pointer; background-color: rgb(213, 252, 255); margin-top: 140px; margin-left: 420px; z-index: -4;" onclick="nome()" > <p style="font-size: 30px;">Clicca per inserire il nome </p></button>
+    <div id="scatola_nome"><p style="font-size: 70px; margin-top: 0px; opacity: 0;"></p></div>
 
 
+    <script type="text/javascript">
+
+    </script>
     <script>
         let intervalID;
         let intervalID2;
@@ -229,17 +248,34 @@
         let m2=0;
         const mioOutput=document.getElementById("conto");
         
-        function Inizia(){
-            const scelta1 = document.querySelector(".bottone2");
-            scelta1.classList.add("animazione1");
-            const scelta2 = document.querySelector(".bottone3");
-            scelta2.classList.add("animazione2");
+        function Inizia1(){
+            const nome = document.getElementById("nome1");
+            nome.style.zIndex = '3';
             const testo = document.getElementById("testo1");
             const bottone = document.querySelector(".bottone1");
             testo.style.display = 'none';
             bottone.style.display = 'none';
         }
+        const scatola_nome = document.getElementById("scatola_nome");
+        function nome(){
+            var nome_player = prompt("Come ti chiami?");
+            if (nome_player != null) {
+                scatola_nome.innerHTML = nome_player;
+                Inizia2();
+            }
+        }
+        function Inizia2(){
+            const nome = document.getElementById("nome1");
+            nome.style.zIndex = '-3';
+            const scelta1 = document.querySelector(".bottone2");
+            scelta1.classList.add("animazione1");
+            const scelta2 = document.querySelector(".bottone3");
+            scelta2.classList.add("animazione2");
+
+        }
         function Scelta1(){
+            const scatola_nome = document.getElementById("scatola_nome");
+            scatola_nome.style.opacity = '1';
             const esci = document.querySelector(".bottone5");
             esci.style.opacity = '0';
             esci.style.zIndex = '-3';
@@ -393,6 +429,8 @@
             window.location.reload();
         }
         function Scelta2(){
+            const scatola_nome = document.getElementById("scatola_nome");
+            scatola_nome.style.opacity = '1';
             const esci = document.querySelector(".bottone5");
             esci.style.opacity = '0';
             esci.style.zIndex = '-3';
@@ -573,5 +611,6 @@
         }
         
     </script>
+
 </body>
 </html>
