--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@ body {margin:0;font-family:Arial}
        <a href="https://france902.github.io/tpsit/es_js_6.html">es 6 js</a>
       <a href="https://france902.github.io/tpsit/js_7.html">simulazione verifica</a>
        <a href="https://france902.github.io/tpsit/morra_cinese.html">morra cinese</a>
+      <a href="https://france902.github.io/tpsit/array_1.html">Array 1</a>
     </div>
   </div> 
   <a href="#about">About</a>
