--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@ body {margin:0;font-family:Arial}
       <a href="https://france902.github.io/tpsit/js_7.html">simulazione verifica</a>
        <a href="https://france902.github.io/tpsit/morra_cinese.html">morra cinese</a>
       <a href="https://france902.github.io/tpsit/array_1.html">Array 1</a>
+      <a href="https://france902.github.io/tpsit/simulazione_verifica.html">Simulazione_verifica</a>
     </div>
   </div> 
   <a href="#about">About</a>
