--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Javascript 1</h5>
                   <p class="card-text">Esercizio in cui abbiamo usato per la prima volta Javascript</p>
-                  <a href="/es_1_jst.html" class="btn btn-primary">Vai</a>
+                  <a href="/es_1_javascript.html" class="btn btn-primary">Vai</a>
                 </div>
               </div>
               <div class="col">
