--- a/tutorial_bootstrap.html
+++ b/tutorial_bootstrap.html
@@ -32,9 +32,8 @@
                     <img src="./images/california.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">California Roll</h5>
-                      <p class="card-text">Assapora la prelibatezza cucinata dallo chef mentre ascolti della magnifica musica. 
-                        Prova a restare in tema ascoltando la mitica canzone California Love rimanere in tema.</p>
-                      <a href="#" class="btn btn-primary">Acquista!!</a>
+                      <p class="card-text">Concediti di poter assaggiare questa prelibatezza che ricorda la californi, pur essendo un sushi.</p>
+                      <a href="#" class="btn btn-primary">Acquista</a>
                     </div>
                   </div>
             </div>
@@ -43,9 +42,8 @@
                     <img src="./images/dragon.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Dragon Roll</h5>
-                      <p class="card-text">Assapora la prelibatezza cucinata dallo chef mentre guardi un magnifico episodio di DragonBall. 
-                        Dato il nome lo chef immagina sia Goku o uno dei mitici protagonisti.</p>
-                      <a href="#" class="btn btn-primary">Acquista!!</a>
+                      <p class="card-text">Assapora questa creazione dello chef che ricorda il famoso manga Dragonball</p>
+                      <a href="#" class="btn btn-primary">Acquista</a>
                     </div>
                   </div>
             </div>
@@ -54,9 +52,8 @@
                     <img src="./images/dynamite.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Dynamite Roll</h5>
-                      <p class="card-text">Assapora la prelibatezza cucinata dallo chef senza far esplodere niente. 
-                        Puoi osservare per rimanere in tema un video di brawl stars dato il brawler.</p>
-                      <a href="#" class="btn btn-primary">Acquista!!</a>
+                      <p class="card-text">Assapora la prelibatezza dal sapore scoppiettante e forte</p>
+                      <a href="#" class="btn btn-primary">Acquista</a>
                     </div>
                   </div>
             </div>
@@ -65,9 +62,8 @@
                     <img src="./images/philadelphia.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Philadelphia Roll</h5>
-                      <p class="card-text">Assapora la prelibatezza cucinata dallo chef mentre guardi un bel film. 
-                        Puoi vedere direttamente la città con il nome del piatto grazie al film Rocky Balboa, occhio a non affaticarti con i loro allenamenti.</p></p>
-                      <a href="#" class="btn btn-primary">Acquista!!</a>
+                      <p class="card-text">Assapora questo buonissimo sushi e preparati a rimanere stupito.</p>
+                      <a href="#" class="btn btn-primary">Acquista</a>
                     </div>
                   </div>
             </div>
@@ -76,9 +72,8 @@
                     <img src="./images/rainbow.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Rainbow Roll</h5>
-                      <p class="card-text">Assapora la prelibatezza cucinata dallo chef mentre guardi un arcobaleno. 
-                        Oppure puoi vedere qualche video del gioco Rainbow Six Siege però occhio a non arrabbiarti.</p></p>
-                      <a href="#" class="btn btn-primary">Acquista!!</a>
+                      <p class="card-text">Assapora questo sushi prelibato e leggero.</p>
+                      <a href="#" class="btn btn-primary">Acquista</a>
                     </div>
                   </div>
             </div>
@@ -87,8 +82,8 @@
                     <img src="./images/shrimp.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">shrimp Roll</h5>
-                      <p class="card-text">Piatto ricco di saggezza e tradizione. Mangialo con molto gusto ma non essere frettoloso o rischi di strozzarti.</p>
-                      <a href="#" class="btn btn-primary">Acquista!!</a>
+                      <p class="card-text">Piatto ricco di saggezza e tradizione.</p>
+                      <a href="#" class="btn btn-primary">Acquista</a>
                     </div>
                   </div>
             </div>
