--- a/tutorial_bootstrap.html
+++ b/tutorial_bootstrap.html
@@ -14,7 +14,7 @@
        
     <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
-        <img src="./images/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
         Fullstack Sushi
         </a>
     </nav>
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="col-sm">
                 <div class="card" style="width: 18rem;">
-                    <img src="./images/california.png" class="card-img-top" alt="...">
+                    <img src="california.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">California Roll</h5>
                       <p class="card-text">Concediti di poter assaggiare questa prelibatezza che ricorda la californi, pur essendo un sushi.</p>
@@ -39,7 +39,7 @@
             </div>
             <div class="col-sm">
                 <div class="card" style="width: 18rem;">
-                    <img src="./images/dragon.png" class="card-img-top" alt="...">
+                    <img src="dragon.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Dragon Roll</h5>
                       <p class="card-text">Assapora questa creazione dello chef che ricorda il famoso manga Dragonball</p>
@@ -49,7 +49,7 @@
             </div>
             <div class="col-sm">
                 <div class="card" style="width: 18rem;">
-                    <img src="./images/dynamite.png" class="card-img-top" alt="...">
+                    <img src="dynamite.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Dynamite Roll</h5>
                       <p class="card-text">Assapora la prelibatezza dal sapore scoppiettante e forte</p>
@@ -59,7 +59,7 @@
             </div>
             <div class="col-sm">
                 <div class="card" style="width: 18rem;">
-                    <img src="./images/philadelphia.png" class="card-img-top" alt="...">
+                    <img src="philadelphia.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Philadelphia Roll</h5>
                       <p class="card-text">Assapora questo buonissimo sushi e preparati a rimanere stupito.</p>
@@ -69,7 +69,7 @@
             </div>
             <div class="col-sm">
                 <div class="card" style="width: 18rem;">
-                    <img src="./images/rainbow.png" class="card-img-top" alt="...">
+                    <img src="rainbow.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Rainbow Roll</h5>
                       <p class="card-text">Assapora questo sushi prelibato e leggero.</p>
@@ -79,7 +79,7 @@
             </div>
             <div class="col-sm">
                 <div class="card" style="width: 18rem;">
-                    <img src="./images/shrimp.png" class="card-img-top" alt="...">
+                    <img src="shrimp.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">shrimp Roll</h5>
                       <p class="card-text">Piatto ricco di saggezza e tradizione.</p>
