--- a/html.html
+++ b/html.html
@@ -38,7 +38,7 @@
                     <div class="card-body">
                       <h5 class="card-title">es 1 html</h5>
                       <p class="card-text">Primo lavoro di tpsit che rguarda una piccola presentazione usando i paragrafi</p>
-                      <a href="#" class="btn btn-primary">Vai</a>
+                      <a href="es_1.html" class="btn btn-primary">Vai</a>
                     </div>
                   </div>
             </div>
@@ -48,7 +48,7 @@
                     <div class="card-body">
                       <h5 class="card-title">scheda personale</h5>
                       <p class="card-text">Presentazione migliorata usando i div</p>
-                      <a href="#" class="btn btn-primary">Vai</a>
+                      <a href="scheda_personale.html" class="btn btn-primary">Vai</a>
                     </div>
                   </div>
             </div>
@@ -58,7 +58,7 @@
                     <div class="card-body">
                       <h5 class="card-title">div annidati</h5>
                       <p class="card-text">Esercizio in cui si usano i div annidati</p>
-                      <a href="#" class="btn btn-primary">Vai</a>
+                      <a href="ES DIV ANNIDATI.html" class="btn btn-primary">Vai</a>
                     </div>
                   </div>
             </div>
@@ -68,7 +68,7 @@
                     <div class="card-body">
                       <h5 class="card-title">link html</h5>
                       <p class="card-text">Esercizio in cui vediamo il tag href</p>
-                      <a href="#" class="btn btn-primary">Vai</a>
+                      <a href="link.html" class="btn btn-primary">Vai</a>
                     </div>
                   </div>
             </div>
