--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                 <div class="card" style="width: 18rem; margin-top: 7vw;">
                     <img src="Rock-paper-scissors.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Morra cinese</h5>
-                      <p class="card-text">Qui c'è il primo gioco fatto nell'anno, la morra cinese</p>
+                      <h5 class="card-title">Giochi</h5>
+                      <p class="card-text">Qui ci sono i giochi fatti durante l'anno, come Morra Cinese, Memory e altri</p>
                       <a href="morra_cinese.html" class="btn btn-primary">Vai</a>
                     </div>
                   </div>
