--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Giochi</h5>
                       <p class="card-text">Qui ci sono i giochi fatti durante l'anno, come Morra Cinese, Memory e altri</p>
-                      <a href="morra_cinese.html" class="btn btn-primary">Vai</a>
+                      <a href="giochi.html" class="btn btn-primary">Vai</a>
                     </div>
                   </div>
             </div>
