--- a/giochi.html
+++ b/giochi.html
@@ -19,7 +19,7 @@
 
   </head>
   <body>
-    <img class="body" src="code-3337044.jpg" alt="">
+    <img class="body" src="giochi.jpg" alt="">
     <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
         Giochi
@@ -34,7 +34,7 @@
         <div class="row">
             <div class="col-sm">
                 <div class="card" style="width: 18rem;">
-                    <img src="cattura8.png" class="card-img-top" alt="...">
+                    <img src="morra_cinese2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Morra cinese</h5>
                       <p class="card-text">Gioco della morra cinese, usando javascript, funzioni e css</p>
@@ -44,7 +44,7 @@
             </div>
             <div class="col-sm">
                 <div class="card" style="width: 18rem;">
-                    <img src="cattura9.png" class="card-img-top" alt="...">
+                    <img src="memory.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">People Memory</h5>
                       <p class="card-text">Gioco memory creato con Boostrap e Javascript</p>
