--- a/js.html
+++ b/js.html
@@ -105,6 +105,17 @@
               </div>
         </div>
       </div>
+        <div class="col-sm">
+            <div class="card" style="width: 18rem; margin-left: -1vw; margin-top: 20vh;">
+                <img src="cattura15.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">js 8</h5>
+                  <p class="card-text">Generatore di frasi casuali </p>
+                  <a href="frasi.html" class="btn btn-primary">vai</a>
+                </div>
+              </div>
+        </div>
+      </div>
           
     
     </div>
