--- a/js.html
+++ b/js.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Fullstack Sushi</title>
+    <title>Javascript</title>
   </head>
   <body>
     <img class="body" src="code-3337044.jpg" alt="">
