--- a/js.html
+++ b/js.html
@@ -106,7 +106,7 @@
         </div>
       </div>
         <div class="col-sm">
-            <div class="card" style="width: 18rem; margin-top: 20vh;">
+            <div class="card" style="width: 18rem; margin-top: 20vh; margin-left: 20vw">
                 <img src="cattura15.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">js 8</h5>
