--- a/html.html
+++ b/html.html
@@ -72,6 +72,16 @@
                     </div>
                   </div>
             </div>
+            <div class="col-sm">
+                <div class="card" style="width: 18rem; border: 2px solid black; margin-top: 10vh; margin-left: 40vw;">
+                    <img src="cattura16.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Boostrap 2</h5>
+                      <p class="card-text">Pagina responsive su argomento a scelta</p>
+                      <a href="link.html" class="btn btn-primary">Vai</a>
+                    </div>
+                  </div>
+            </div>
             
     
     </div>
