--- a/html.html
+++ b/html.html
@@ -63,7 +63,7 @@
                   </div>
             </div>
             <div class="col-sm">
-                <div class="card" style="width: 18rem; border: 2px solid black; margin-top: 10vh; margin-left: 10vw;">
+                <div class="card" style="width: 18rem; border: 2px solid black; margin-top: 10vh;">
                     <img src="cattura4.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">link html</h5>
@@ -73,7 +73,7 @@
                   </div>
             </div>
             <div class="col-sm">
-                <div class="card" style="width: 18rem; border: 2px solid black; margin-top: 10vh; margin-left: 40vw;">
+                <div class="card" style="width: 18rem; border: 2px solid black; margin-top: -10vh; margin-left: 30vw;">
                     <img src="cattura16.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Boostrap 2</h5>
